--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 python = ">=3.11,<3.14"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
-langchain = "^0.1.14"
+langchain = "^0.3.26"
 openai = "^1.23.0"
 hdbscan = "^0.8.33"
 scikit-learn = "^1.4.2"
@@ -28,6 +28,7 @@ python-multipart = "^0.0.20"
 fastapi-injector = "^0.8.0"
 sqlalchemy = "^2.0.41"
 alembic = "^1.16.4"
+langchain-openai = "^0.3.27"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
