--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,12 +29,50 @@ fastapi-injector = "^0.8.0"
 sqlalchemy = "^2.0.41"
 alembic = "^1.16.4"
 langchain-openai = "^0.3.27"
+pycountry = "^24.6.1"
+rapidfuzz = "^3.13.0"
+langsmith = "^0.4.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 pytest-asyncio = "^0.23.6"
 httpx = {extras = ["cli"], version = "^0.27.0"}
+flake8 = "^7.3.0"
+black = "^25.1.0"
+pre-commit = "^4.2.0"
+isort = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api" 
+
+[tool.black]
+line-length = 127
+target-version = ['py310']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 127
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip = [".git", "build", "dist", ".venv", ".mypy_cache"]
+known_first_party = ["api", "core", "db", "domain", "managers", "repositories", "schemas", "services", "utils"]
+
+ 
