--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,6 +36,7 @@ orjson = "^3.10.18"
 requests = "^2.32.3"
 plotly = "^5.22.0"
 umap-learn = "^0.5.9.post2"
+chart-studio = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
